--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Standards-Version: 3.9.5
 Vcs-Browser: https://anonscm.debian.org/git/pkg-shadow/shadow.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-shadow/shadow.git
 Homepage: https://github.com/shadow-maint/shadow
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
 
 Package: passwd
 Architecture: any
